--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -876,10 +876,26 @@ section,
 }
 @media (max-width: 420px) {
   .hero .container {
-    /* background-color: red; */
-    /* height: 50vh */
-    margin-bottom: 550px;
+    /* padding-top:20px */
+    position: relative;
+  text-align: center;
+  padding-top: 10px;
+
+    height: 80px;
+    margin-bottom: 600px;
   }
+}
+#readmore{
+  /* background-color:red; */
+  /* margin-top:-43px; */
+  height: 30px;
+    width: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 15px;
+    margin-left:60px
 }
 
 .hero h2 {
@@ -895,12 +911,23 @@ section,
 }
 @media (max-width: 640px) {
   .hero h2 {
-    font-size: 18px;
+    font-size: 15px;
   }
 }
 @media (max-width: 420px) {
-  .hero h2 {
-    font-size: 15px;
+  .hero  h3 {
+    font-size: 8px;
+  }
+}
+@media (max-width: 420px) {
+  .hero  h2 {
+    font-size: 8px;
+  }
+}
+@media (max-width: 420px) {
+  .container .heading {
+    margin-top:-80px;
+    /* background-color:red; */
   }
 }
 
@@ -916,7 +943,18 @@ section,
   color: var(--contrast-color);
   border: 2px solid var(--accent-color);
 }
-
+@media (max-width: 420px) {
+  .btn-get-started {
+    height: 40px;
+    width: 170px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 8px;
+    
+  }
+}
 .hero .btn-get-started:hover {
   background: var(--accent-color);
   color: var(--contrast-color);
@@ -931,6 +969,7 @@ section,
   align-items: center;
   font-size: 2em;
 }
+
 .r {
   display: inline-block;
   border: 2px solid #000;
@@ -942,6 +981,13 @@ section,
   line-height: 1;
   position: absolute;
   margin-top: 27px;
+}
+@media (max-width: 420px) {
+  .r {
+    font-size: 0.5em; /* Smaller font size */
+    padding: 0.1em 0.3em; /* Reduce padding */
+    margin-top: 20px; /* Adjust margin for smaller screens */
+  }
 }
 .rr {
   display: inline-block;
@@ -1047,7 +1093,7 @@ section,
 }
 @media (max-width: 420px) {
   .hero .carousel-indicators li {
-    margin-top: -560px; /* Apply the -40px margin for screens 420px or smaller */
+    margin-top: -540px; /* Apply the -40px margin for screens 420px or smaller */
   }
 }
 .hero .carousel-indicators li.active {
