--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -960,7 +960,7 @@ section,
 @media (max-width: 420px) {
   #read-btn {
     /* background-color: red; */
-    margin-top:2px;
+    margin-top: 2px;
   }
 }
 .hero .btn-get-started:hover {
@@ -1010,7 +1010,7 @@ section,
   text-align: center;
   line-height: 1;
   position: absolute;
-  /* margin-top: 27px; */
+  margin-left: 94px;
 }
 
 .hero .carousel-control-next-icon,
@@ -1058,7 +1058,7 @@ section,
     font-size: 10px; /* Smaller icon size */
     width: 20px; /* Smaller width */
     height: 20px; /* Smaller height */
-    margin-top: -380px;
+    margin-top: -390px;
   }
 
   .hero .carousel-control-prev,
@@ -1085,8 +1085,8 @@ section,
   }
 }
 
-
-.divleftspan,.divrightspan  {
+.divleftspan,
+.divrightspan {
   margin-top: 350px; /* Apply the -40px margin for screens 420px or smaller */
 }
 
