--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -624,6 +624,9 @@ h6 {
   margin-top: 6px;
   font-size: 13px;
 }
+.color {
+  color:#1DB954;
+}
 
 /*--------------------------------------------------------------
 # Preloader
@@ -1119,7 +1122,7 @@ section,
 }
 .about .inner-title {
   font-size: 2.75rem;
-  font-weight: 500;
+  font-weight: 600;
   /* margin: 30px 0; */
 }
 
@@ -1235,7 +1238,7 @@ section,
   border-radius: 50%;
   padding: 0.2em 0.4em;
   font-size: 0.6em;
-  margin-top:300px;
+  margin-top: 300px;
   line-height: 1;
   position: absolute;
   /* margin-left: 94px; */
