--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -765,7 +765,7 @@ section,
 --------------------------------------------------------------*/
 .section-title {
   text-align: center;
-  /* padding-bottom: 60px; */
+  padding-bottom: 60px;
   position: relative;
 }
 
@@ -1290,14 +1290,17 @@ section,
 
 // why choose us
 @media (max-width: 420px) {
-  .whychoose {
+  .section-title .whychoose {
     margin-top: -260px;
     background-color: red;
+  }}
+@media (max-width: 420px) {
+  .model {
+   margin-top:-30px;
+    /* background-color: red; */
   }
 }
-.whychoose {
-  /* background-color: red; */
-}
+
 .services .service-item1 {
   background-color: var(--surface-color);
   box-shadow: 0px 5px 90px 0px rgba(0, 0, 0, 0.1);
@@ -1701,9 +1704,15 @@ section,
 }
 
 @media (max-width: 420px) {
+  #testimonials {
+    height: 67vh;
+    margin-top: -40px;
+  }
+}
+@media (max-width: 420px) {
   .testimonials .testimonial-item {
     margin-top: -50px;
-    height: 104%;
+    /* height: 35vh; */
   }
 }
 @media (max-width: 420px) {
