--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1261,7 +1261,7 @@ section,
 }
 .rounds {
   display: inline-block;
-  border: 2px solid #000;
+  border: 1px solid #000;
   color: #000;
   border-radius: 50%;
   padding: 0.1em 0.2Fem;
@@ -1703,7 +1703,7 @@ section,
   height: 100%;
 }
 
-@media (max-width: 420px) {
+/* @media (max-width: 420px) {
   #testimonials {
     height: 67vh;
     margin-top: -40px;
@@ -1712,9 +1712,9 @@ section,
 @media (max-width: 420px) {
   .testimonials .testimonial-item {
     margin-top: -50px;
-    /* height: 35vh; */
+    
   }
-}
+} */
 @media (max-width: 420px) {
   .installation {
     margin-top: -50px;
