--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1263,14 +1263,16 @@ section,
   display: inline-block;
   border: 1px solid #000;
   color: #000;
+  height:5px;
+  width:5px;
   border-radius: 50%;
   padding: 0.1em 0.2Fem;
-  font-size: 0.4em;
+  font-size: 0.3em;
   margin-top: 305px;
-  line-height: 1;
+  line-height: 1.5;
   position: absolute;
 }
-/*--------------------------------------------------------------
+/*-------------------------------------------------------------
 # Services Section
 --------------------------------------------------------------*/
 .services .service-item {
